src/DataDistributionManager/DataDistributionManager_c.h

	DLLEXPORT void* DLLCALL DataDistribution_create();
	DLLEXPORT void* DLLCALL DataDistributionCallback_create(void* opaque, dataDistributionConfigurationCb, dataDistributionLoggingCb, dataDistributionCompletelyDisconnectedCb);
	DLLEXPORT void DLLCALL DataDistributionCallback_delete(void* ddcb);
	DLLEXPORT void* DLLCALL DataDistributionChannelCallback_create(void* opaque, dataDistributionUnderlyingEvent uEventCb);
	DLLEXPORT void DLLCALL DataDistributionChannelCallback_delete(void* ddtcb);
	DLLEXPORT void* DLLCALL DataDistributionMastershipCallback_create(void* opaque, dataDistributionOnClusterStateChange p1, dataDistributionOnStateChange p2,
		dataDistributionOnStateReady p3, dataDistributionOnRequestedState p4, dataDistributionOnMultiplePrimary p5,
		dataDistributionFirstStateChange p6, dataDistributionChangingState p7, dataDistributionChangedState p8);
	DLLEXPORT void DLLCALL DataDistributionMastershipCallback_delete(void* ddmcb);
	// IDataDistribution interface
	DLLEXPORT HRESULT DLLCALL IDataDistribution_Initialize(void* IDataDistribution_instance, void* iddcb, const char* conf_file, const char* szMyAddress, const char* channelTrailer);
	DLLEXPORT HRESULT DLLCALL  IDataDistribution_Initialize2(void* IDataDistribution_instance, void* iddcb, const char* arrayParams[], int len, const char* szMyAddress, const char* channelTrailer);
	DLLEXPORT HRESULT DLLCALL IDataDistribution_RequestMastershipManager(void* IDataDistribution_instance, void* cbs, const char* szMyAddress = NULL, const char* arrayParams[] = NULL, int len = 0);
	DLLEXPORT void* DLLCALL IDataDistribution_GetSubsystemManager(void* IDataDistribution_instance);
	DLLEXPORT void* DLLCALL IDataDistribution_GetMastershipManager(void* IDataDistribution_instance);
	DLLEXPORT const char* DLLCALL IDataDistribution_GetProtocol(void* IDataDistribution_instance);
	DLLEXPORT const char* DLLCALL IDataDistribution_GetProtocolLib(void* IDataDistribution_instance);
	DLLEXPORT const char* DLLCALL IDataDistribution_GetMastershipLib(void* IDataDistribution_instance);