DataDistributionManager/DataDistributionManager.h

typedef const char*(__cdecl *dataDistributionConfigurationCb) (const void* opaque, const char* key, const char* value);
typedef void(__cdecl *dataDistributionLoggingCb) (const void* opaque, const DDM_LOG_LEVEL level, const char* source, const char* function, const char* errorStr);
typedef void(__cdecl *dataDistributionCompletelyDisconnectedCb) (const void* opaque, const char* source, const char* errorStr);
typedef struct __declspec(dllexport) underlyingEventData
{
	const char* ChannelName;
	DDM_UNDERLYING_ERROR_CONDITION Condition;
	BOOL IsDataAvailable;
	const char* Key;
	size_t KeyLen;
	const void* Buffer;
	size_t BufferLength;
	int NativeCode;
	const char* SubSystemReason;

	underlyingEventData(const char* channelName)
	{
		ChannelName = channelName;
		Condition = DDM_UNDERLYING_ERROR_CONDITION::DDM_NO_ERROR_CONDITION;
		IsDataAvailable = FALSE;
		Key = NULL;
		KeyLen = 0;
		Buffer = NULL;
		BufferLength = 0;
		NativeCode = 0;
		SubSystemReason = NULL;
	}

	underlyingEventData(const char* channelName, const char* key, size_t keyLen, const void* buffer, size_t bufferLength) : underlyingEventData(channelName)
	{
		Key = key;
		KeyLen = keyLen;
		Buffer = buffer;
		BufferLength = bufferLength;
		IsDataAvailable = TRUE;
	}

	underlyingEventData(const char* channelName, DDM_UNDERLYING_ERROR_CONDITION condition, int nativeCode, const char* subSystemReason) : underlyingEventData(channelName)
	{
		Condition = condition;
		NativeCode = nativeCode;
		SubSystemReason = subSystemReason;
	}
} UnderlyingEventData, *pUnderlyingEventData;
typedef void(__cdecl *dataDistributionUnderlyingEvent)(const void* opaque, const HANDLE channelHandle, const UnderlyingEventData* uEvent);
typedef void(__cdecl * dataDistributionOnClusterStateChange)(void* opaque, DDM_CLUSTEREVENT change, size_t serverid);
typedef void(__cdecl * dataDistributionOnStateChange)(void* opaque, DDM_INSTANCE_STATE newState, DDM_INSTANCE_STATE oldState);
typedef void(__cdecl * dataDistributionOnStateReady)(void* opaque, void* pState, size_t len);
typedef void(__cdecl * dataDistributionOnRequestedState)(void* opaque, void** pState, size_t* len);
typedef void(__cdecl * dataDistributionOnMultiplePrimary)(void* opaque, size_t myId, size_t otherId);
typedef void(__cdecl * dataDistributionFirstStateChange)(void* opaque, DDM_INSTANCE_STATE newState);
typedef void(__cdecl * dataDistributionChangingState)(void* opaque, DDM_INSTANCE_STATE oldState, DDM_INSTANCE_STATE newState);
typedef void(__cdecl * dataDistributionChangedState)(void* opaque, DDM_INSTANCE_STATE newState);